--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
             <artifactId>apache-poi-ooxml</artifactId>
             <version>62</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.5</version>
+        </dependency>
     </dependencies>
 
 </project>
